Fix ad position on mobile

--- a/assets/styles/sideNav.scss
+++ b/assets/styles/sideNav.scss
@@ -225,6 +225,10 @@ select:focus {
     max-width: none;
   }
 
+  .ads-wrapper {
+    margin: 0;
+  }
+
   .side-nav-wrapper {
     min-height: auto;
   }
